# LovyanGFX

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LGFX_BmpSupport.hpp  LGFX_FontLoad.hpp  LGFX_TFT_eSPI.hpp  LGFX_core.hpp  LovyanGFX.hpp  README.md  README.rst  README_ja.md  TFT_DISPLAY_IMPLEMENTATION_GUIDE.md  component.mk  library.json  library.properties  license.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report--------.md  device-support-request-------------.md  feature-request-------.md
.github/Workflows/: onrelease.yml
.github/scripts/: OpenCV.cmake  SDL.cmake  ci-compile  esp-idf-versions.php  installOpenCV.bat  installSDL2.bat  semver.sh
.github/workflows/: ArduinoBuild.yml  IDFBuild.yml  OpenCVBuild.yml  PicoSDKBuild.yml  PlatformioBuild.yml  SDLBuild.yml  build.yml  issues-auto-closer.yml  onrelease.yml  pioPkgPublish.yml  stale.yml
Fonts/: Font16.c  Font16.h  Font32rle.c  Font32rle.h  Font64rle.c  Font64rle.h  Font72rle.c  Font72rle.h  Font72x53rle.c  Font72x53rle.h  Font7srle.c  Font7srle.h  gfxfont.h
boards.cmake/: esp-idf.cmake  pico-sdk.cmake
ci/: ci-compile
doc/: Panel_CVBS.md
documentation/: .gitignore  01_intro.rst  02_getting_started.rst  02_using.rst  03_specific_hardware.rst  03_tutorial.rst  04_reference.rst  04_reference_manual.rst  05_contributions.rst  05_helping.rst  Makefile  README.md  README.rst  conf.py  doxygen.conf  doxygen.conf.orig  index.rst  requirements.txt
documentation/_static/css/: custom.css
documentation/_static/js/: custom.js
examples/Advanced/CMake_FrameBuffer/: CMakeLists.txt  LGFX_LINUX_FB.cpp
examples/Advanced/CMake_OpenCV/: CMakeLists.txt  CMakeSettings.json  LGFXOpenCV.cpp  README.md  main.cpp
examples/Advanced/CMake_SDL/: CMakeLists.txt  CMakeSettings.json  LGFXSDL.cpp  main.cpp
examples/Advanced/EPD/: EPD.ino
examples/Advanced/ESP32DeepSleepDisplay/: ESP32DeepSleepDisplay.ino
examples/Advanced/LVGL_PlatformIO/: platformio.ini
examples/ESP32TEST/: ESP32TEST.ino
examples/FileTest/: FileTest.ino
examples/Font/efont/: efont.ino
examples/Game/BallMaze/: BallMaze.ino
examples/HowToUse/1_simple_use/: 1_simple_use.ino  platformio.ini
examples/HowToUse/2_spi_setting/: 2_spi_setting.ino
examples/HowToUse/2_user_setting/: 2_user_setting.ino
examples/HowToUse/3_fonts/: 3_fonts.ino
examples/HowToUse/5_images/: 5_images.ino  image.h
examples/LovyGFX_ArduinoESP32/: LovyGFX_ArduinoESP32.ino
examples/Sprite/ClockSample/: ClockSample.ino
examples/Sprite/CollisionCircles/: CollisionCircles.ino
examples/Sprite/FlashMemSprite/: 320x240x16.h  FlashMemSprite.ino  image1280x960x1.h  image320x240x16.h  image480x320x8.h  image640x480x4.h
examples/Sprite/MeterSample/: MeterSample.ino
examples/Sprite/MovingCircles/: MovingCircles.ino
examples/Sprite/MovingIcons/: Alert.h  Close.h  Info.h  MovingIcons.ino
examples/Sprite/PartyParrot/: PartyParrot.ino  parrot00.h  parrot01.h  parrot02.h  parrot03.h  parrot04.h  parrot05.h  parrot06.h  parrot07.h  parrot08.h  (+2 more)
examples/TFT_graphicstest_PDQ/: TFT_graphicstest_PDQ.ino
examples/TFT_graphicstest_Sprite/: TFT_graphicstest_Sprite.ino
examples/TextScroll/: TextScroll.ino
examples/spriteTest/: spriteTest.ino
examples_for_PC/: README.md
examples_for_PC/CMake_FrameBuffer/: CMakeLists.txt  LGFX_LINUX_FB.cpp  user_code.cpp
examples_for_PC/CMake_OpenCV/: CMakeLists.txt  LGFXOpenCV.cpp  user_code.cpp
examples_for_PC/CMake_SDL/: CMakeLists.txt  CMakeSettings.json  LGFX_SDL.cpp  sdl_main.cpp  user_code.cpp
examples_for_PC/CMake_WASM/: CMakeLists.txt  LGFX_WASM.cpp  README.md  lgfx_wasm.html  user_code.cpp
examples_for_PC/PlatformIO_SDL/: README-en.md  README.md  platformio.ini
examples_for_picosdk/i2c/: CMakeLists.txt  LGFX_config.hpp  main.cpp
examples_for_picosdk/spi/: CMakeLists.txt  LGFX_config.hpp  main.cpp
lgfx_panel/: panel_ILI9341.hpp  panel_ST7735.hpp  panel_ST7789.hpp  panel_common.hpp  panel_ilitek_common.hpp  panel_ssd_common.hpp
src/: LGFX_AUTODETECT.hpp  LGFX_TFT_eSPI.h  LGFX_TFT_eSPI.hpp  LovyanGFX.h  LovyanGFX.hpp  gitTagVersion.h  lvgl.h
src/Fonts/: Ascii24x48.h  Ascii8x16.h  Font64rle.h  Font8x8C64.h  gfxfont.hpp  lgfx_fonts.cpp  lgfx_fonts.hpp
src/config/: LGFX_Config.hpp  LGFX_Config_AutoDetect.hpp  LGFX_Config_AutoDetectESP32.hpp  LGFX_Config_DDUINO32_XS.hpp  LGFX_Config_ESP_WROVER_KIT.hpp  LGFX_Config_LoLinD32.hpp  LGFX_Config_M5Stack.hpp  LGFX_Config_M5StickC.hpp  LGFX_Config_ODROID_GO.hpp  LGFX_Config_TTGO_TS.hpp  LGFX_Config_TTGO_TWatch.hpp  LGFX_Config_TTGO_TWristband.hpp  LGFX_Config_WioTerminal.hpp
src/lgfx/: LGFXBase.cpp  LGFXBase.hpp  LGFX_Device.hpp  LGFX_Sprite.hpp  boards.hpp  gfxfont.hpp  lgfx_base.cpp  lgfx_base.hpp  lgfx_common.hpp  lgfx_filesystem_support.hpp  lgfx_font_support.hpp  lgfx_fonts.cpp  lgfx_fonts.hpp  lgfx_img_support.hpp  lgfx_sprite.hpp  v0_init.hpp  v1_init.hpp
src/lgfx_user/: LGFX_3.5_RPI_LCD_A.hpp  LGFX_ESP32S2_DSO138_Parallel8.hpp  LGFX_ESP32S2_MakerabsParallelTFTwithTouch.hpp  LGFX_ESP32S3_RGB_ESP32-8048S043.h  LGFX_ESP32S3_RGB_GUITION_480x480_ST7701s_GT911.h  LGFX_ESP32S3_RGB_MakerfabsParallelTFTwithTouch40.h  LGFX_ESP32S3_RGB_MakerfabsParallelTFTwithTouch43.h  LGFX_ESP32S3_wywy_ESP32HMI.h  LGFX_ESP32_S3_Touch_LCD_2.h  LGFX_ESP32_sample.hpp  LGFX_ESP8266_ESPboy.hpp  LGFX_ESP8266_sample.hpp  LGFX_ESPboy.hpp  LGFX_Elecrow_ESP32_Display_DLC35010R.h  LGFX_Elecrow_ESP32_Display_WZ8048C050.h  LGFX_Elecrow_ESP32_Display_WZ8048C070.h  LGFX_JC4827W543_4.3inch_ESP32S3.hpp  LGFX_Makerfabs_MaTouchESP32S3ParallelTFTwithTouch7.h  LGFX_Monica.hpp  LGFX_RP2040_096_Waveshare_sample.hpp  LGFX_RP2040_128_Waveshare_round.hpp  LGFX_SAMD21_sample.hpp  LGFX_SAMD51_sample.hpp  LGFX_SPRESENSE_sample.hpp  LGFX_Sunton_ESP32-8048S050.h  LGFX_Sunton_ESP32-8048S070.h  LGFX_Waveshare_ESP32S3_Touch_LCD_43.h  LILYGO_T-Display-S3_ESP32-S3.hpp  Lilygo_T4_S3.hpp  Lilygo_T_Display_S3_AMOLED.hpp  M5AtomDisplay.hpp  M5ModuleDisplay.hpp  M5Tab5.hpp  M5UnitGLASS.hpp  M5UnitLCD.hpp  M5UnitOLED.hpp  SharpLCD.hpp
src/utility/: lgfx_pngle.c  lgfx_qrcode.c  miniz.c
utility/: tjpgdClass.cpp
(+525 files in other folders)
